[gd_scene load_steps=20 format=3 uid="uid://b7rfp31d60i48"]

[ext_resource type="PackedScene" uid="uid://dl2q5epsndpea" path="res://Scenes/base.tscn" id="1_ynjhl"]
[ext_resource type="Texture2D" uid="uid://ph85d7ek3qvj" path="res://icon.svg" id="2_4yaod"]
[ext_resource type="Script" uid="uid://dflb8or6uvwrv" path="res://Scenes/Enemies/enemy.gd" id="2_gnx0v"]
[ext_resource type="Resource" uid="uid://bkdywrxx7gqxl" path="res://Resources/base/Enemies/stats_sand_mite.tres" id="3_gnx0v"]
[ext_resource type="Texture2D" uid="uid://dthveehaqylpg" path="res://Assets/Sprites/Enemies/Sand Mite/Sand Mite-Sheet.png" id="4_hlgua"]
[ext_resource type="PackedScene" uid="uid://baxagywh1rba1" path="res://Scenes/Components/hitbox_component.tscn" id="5_7sxqv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ldw"]
atlas = ExtResource("4_hlgua")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_cewjn"]
atlas = ExtResource("4_hlgua")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo6w1"]
atlas = ExtResource("4_hlgua")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_thoen"]
atlas = ExtResource("4_hlgua")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_piaqg"]
atlas = ExtResource("4_hlgua")
region = Rect2(100, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvedb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ldw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cewjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo6w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thoen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piaqg")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7sxqv"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gnx0v"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o2ldw"]
radius = 94.0053

[sub_resource type="CircleShape2D" id="CircleShape2D_hlgua"]
radius = 98.1835

[sub_resource type="Animation" id="Animation_o2ldw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hlgua"]
resource_name = "Wave"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.2173]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.3534, 0.42067, 0.93, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cewjn"]
_data = {
&"RESET": SubResource("Animation_o2ldw"),
&"Wave": SubResource("Animation_hlgua")
}

[node name="SandMite" instance=ExtResource("1_ynjhl")]
collision_layer = 2
script = ExtResource("2_gnx0v")
flock_push = 20.0
stats = ExtResource("3_gnx0v")

[node name="Visuals" parent="." index="0"]
scale = Vector2(0.7, 0.7)

[node name="Shadow" parent="Visuals" index="0"]
position = Vector2(-4.76837e-07, -8.57143)
scale = Vector2(1.34286, 1.11428)

[node name="AnimatedSprite2D" parent="Visuals" index="1"]
position = Vector2(-8.57143, -80)
scale = Vector2(13.0257, 12.56)
sprite_frames = SubResource("SpriteFrames_wvedb")
animation = &"default"
autoplay = "default"
frame_progress = 0.726748

[node name="Sprite2D" type="Sprite2D" parent="Visuals" index="2"]
visible = false
position = Vector2(0, -63)
texture = ExtResource("2_4yaod")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -62)
shape = SubResource("CircleShape2D_7sxqv")
debug_color = Color(0.985329, 0, 0.334846, 0.42)

[node name="VisionArea" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea" index="0"]
position = Vector2(0, -58)
shape = SubResource("CircleShape2D_gnx0v")

[node name="HurtboxComponent" parent="." index="3"]
collision_layer = 8
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -62)
shape = SubResource("CircleShape2D_o2ldw")
debug_color = Color(1, 0.487198, 0.64356, 0.42)

[node name="HitboxComponent" parent="." index="4" instance=ExtResource("5_7sxqv")]
collision_layer = 4
collision_mask = 32
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, -62)
shape = SubResource("CircleShape2D_hlgua")
debug_color = Color(0.814367, 0, 0.281238, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
&"": SubResource("AnimationLibrary_cewjn")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
